fixed problem with faucet image overflowing its container and changed email redundancy in utils.py to a constant

--- a/app/static/css/homepage.css
+++ b/app/static/css/homepage.css
@@ -76,7 +76,10 @@
     flex: 1;
     text-align: center;
     color: var(--platinum);
-    z-index: 150 !important;
+    z-index: 150;
+	position: relative;
+	display: flex;
+	flex-direction: column;
 }
 
 .product_info_div .product_name_span {
